HTML側のコミット

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
       <h1>Todoリスト</h1>
       <form>
-      <label><input type="checkbox"> すべて</label>
-      <label><input type="checkbox" checked > 作業中</label>
-      <label><input type="checkbox"> 完了</label>
+      <label><input type="radio" name = 'status' id = "radioAll" checked >すべて</label>
+      <label><input type="radio" name = 'status' id = "radioWorking" >作業中</label>
+      <label><input type="radio" name = 'status' id = "radioDone" >完了</label>
       </form>
 
       <div>
